@startuml

title M60 DEVICE DRIVERS LAYER

skinparam packageStyle rectangle
skinparam lineThickness 2

class IDomainModel <<M40 Domain Model>> {}

interface IDeviceDriver
{
    + <abstract> Initialize() 
    + SetDomainModel(IDomainModel& domainModel)
    + GetDomainModel() : IDomainModel
}

class DeviceDriver
{
    + DeviceDriver();
    + SetDeviceModel(IDeviceModel& deviceModel)
    + GetDeviceModel() : IDeviceModel&
}

DeviceDriver o- IDomainModel
DeviceDriver -u-|> IDeviceDriver

package "Ws28xx DeviceDriver"
{
    class Ws28xxDeviceDriver <<LedStripTask>> #lightblue
    {
        + Ws28xxDeviceDriver()
        + SetRmt(Rmt& rmt)
        + SetDataPin(uint8_t dataPin)
        + Initialize()
        + GetDataPin() : uint8_t
        + WriteToLedStrip()
        - Ws28xxDeviceModel& GetWs28xxDeviceModel()
        - uint8_t _dataPin
        - uint16_t _nrOfLeds
        - Ws2812Rmt* _ws2812rmt
        - Rmt* _rmt
    }

    Ws28xxDeviceDriver -u-|> DeviceDriver

    class Ws2812Rmt <<LedStripTask>> #lightblue
    {
        + Ws2812Rmt(uint8_t pin, uint16_t led_count, Rmt& rmt)
        + Initialize()
        + Send(const uint8_t* grb_data)
        - uint8_t _pin
        - uint16_t _led_count
        - Rmt& _rmt
    }

    Ws28xxDeviceDriver *-- Ws2812Rmt
}

package "I2C DeviceDriver"
{
    class I2cDeviceDriver <<I2cTask>> #yellow
    {
        + I2cDeviceDriver()
        + SetI2c(I2c& i2c)
        + SetConfiguration(uint8_t port, uint8_t sdaPin, uint8_t sclPin, uint32_t frequency)
        + Initialize() 
        + Read(uint8_t deviceAddress, uint8_t* data, size_t length)
        + Write(uint8_t deviceAddress, const uint8_t* data, size_t length)
        + uint8_t ReadRegister(uint8_t deviceAddress, uint8_t registerAddress)
        + ReadRegister(uint8_t deviceAddress, uint8_t registerAddress, uint8_t* data, size_t length)
        + void WriteRegister(uint8_t deviceAddress, uint8_t registerAddress, uint8_t data)
        + void WriteRegister(uint8_t deviceAddress, uint8_t registerAddress, const uint8_t* data, size_t length)
        - AssertValidPort(uint8_t port)
        - I2c& GetI2c()
        - uint8_t _port
        - uint8_t _sdaPin
        - uint8_t _sclPin
        - uint32_t _frequency
        - I2c* _i2c
    }

    I2cDeviceDriver -u-|> DeviceDriver
}

package "MCP23017 DeviceDriver"
{
    abstract class Mcp23017DeviceDriver <<I2cTask>> #yellow
    {
        + Mcp23017DeviceDriver();
        + SetGpio(Gpio& gpio);
        + SetI2cDeviceDriver(I2cDeviceDriver& i2cDeviceDriver);
        + SetInterruptConfiguration(bool enableInterrupt, uint8_t interruptPin);
        + Initialize() override;
        + GetMcp23017DeviceModel() Mcp23017DeviceModel&
        + HasInterruptTriggered() : bool
        + <<static>> void SetInterruptTriggered()
        + ReadLastInterrupGpioStates() : uint16_t
        + ReadFromDriver()
        + WriteToDriver()
        - GetGpio() : Gpio&
        - SendInputPinsMask()
        - InitializeInterrupts()
        - InitializeInterruptOnEsp(uint8_t interruptPin)
        - InitializeInterruptOnMcp23017()
        - GetI2cDeviceDriver() : I2cDeviceDriver&
        - WriteGpios(uint16_t gpioStates);
        - bool _enableInterrupt
        - uint8_t _interruptPin;
        - I2cDeviceDriver* _i2cDeviceDriver;     
        - uint8_t _i2cAddress;
        - Gpio* _gpio;
    }

    Mcp23017DeviceDriver -u-|> DeviceDriver
    Mcp23017DeviceDriver o--- I2cDeviceDriver

    class InterruptHandler_hpp #yellow 
    {
        + InterruptHandler(void *arg);
    }

    class EspInterruptHandler_cpp #yellow
    {
        + IRAM_ATTR InterruptHandler(void* arg)
    }

    class WindowsInterruptHandler_cpp #yellow
    {
        + InterruptHandler(void* arg)
    }

    EspInterruptHandler_cpp -u-|> InterruptHandler_hpp 
    WindowsInterruptHandler_cpp -u-|> InterruptHandler_hpp 

    Mcp23017DeviceDriver -> InterruptHandler_hpp
}

class Lcd2004DeviceDriver #yellow
{
    +Lcd2004DeviceDriver()
    + GetRtosTask() : RtosTask&
    + SetRtosTask(RtosTask& rtosTask)
    + SetI2cDeviceDriver(I2cDeviceDriver& i2cDeviceDriver)
    + Initialize()
    + SendToDisplay()
    - GetI2cDeviceDriver() : I2cDeviceDriver&
    - GetI2cAddress(): uint8_t
    - GetLcd2004DeviceModel() : Lcd2004DeviceModel&
    - SendDifferentCharacters(uint8_t lineIndex)
    - SendFullLine(uint8_t lineIndex)
    - PrintChar(char c) 
    - PrintLine(std::string_view line)
    - SetCursor(uint8_t row, uint8_t column)
    - Command(uint8_t cmd)
    - Data(uint8_t data)
    - WriteNibble(uint8_t nibble, uint8_t registerSelect)
    - WriteByte(uint8_t byte, uint8_t registerSelect)
    - RtosTask* _rtosTask
    - I2cDeviceDriver* _i2cDeviceDriver
    - uint8_t _i2cAddress
}

Lcd2004DeviceDriver -u-|> DeviceDriver
Lcd2004DeviceDriver  o--- I2cDeviceDriver

class Tm1637DeviceDriver <<I2cTask>> #yellow
{
    + Tm1637DeviceDriver()
    + SetGpio(Gpio& gpio)
    + SetPinsConfiguration(uint8_t clockPin, uint8_t dataPin)
    + Initialize()
    + SendToDisplay()
    - Gpio& GetGpio()
    - Start()
    - void WriteByte(uint8_t byte)
    - void Stop()
    - uint8_t _clockPin
    - uint8_t _dataPin
    - Gpio* _gpio
}

class I2cTask <<M00 Composition>> #yellow {}

class I2cTaskDeviceriversDelegate #yellow
{
    + <<static>> const uint32_t MCP23017_WRITE_GPIOS_FREQUENCY  = 100
    + <<static>> const uint32_t LCD2004_WRITE_DISPLAY_FREQUENCY =   5
    + <<static>> const uint32_t TM1637_WRITE_DISPLAY_FREQUENCY  = 180
    + I2cTaskDeviceDriversDelegate(Context& context)
    + void Initialize()
    + Run()
    - uint64_t _lastMcpWriteUs
    - uint64_t _lastLcdWriteUs   
    - uint64_t _lastTm1637WriteUs
    - Types::ETm1637Id _nextTm1637IdToUpdate
}

class I2cInputQueueWriter <<M40 Domain Model>>
class Context <<M10 Composition>> 
I2cTaskDeviceriversDelegate  o- Context
I2cTaskDeviceriversDelegate  o- I2cInputQueueWriter

I2cTask o-- I2cTaskDeviceriversDelegate 
I2cTaskDeviceriversDelegate --> Lcd2004DeviceDriver
I2cTaskDeviceriversDelegate --> Mcp23017DeviceDriver
I2cTaskDeviceriversDelegate --> Tm1637DeviceDriver

@enduml
